# my_substrate

./: Cargo.toml  weights.sh
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/smultisig/: Cargo.toml
pallets/smultisig/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
